syntax = 'proto3';

package queryapi;
option go_package = "github.com/armadaproject/armada/pkg/api";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;

enum JobStatus {
  UNKNOWN = 0;
  SUBMITTED = 1;
  QUEUED = 2;
  LEASED = 3;
  PENDING = 4;
  RUNNING = 5;
  SUCCEEDED = 6;
  FAILED = 7;
  PREEMPTED = 8;
  CANCELLED = 9;
}

message JobStatusRequest{
  string job_id = 1;
}

message JobStatusResponse{
  string job_id = 1;
  JobStatus job_status = 2;
}

service QueryApi {
  rpc GetJobStatus (JobStatusRequest) returns (JobStatusResponse);
}
